# village

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/source/: api_index.rst  conf.py  index.rst
village/: __init__.py  camera.py  fake.py  log.py  main.py  playground.py  settings.py  utils.py
village/gui/: behaviour_window.py  data_layout.py  gui.py  gui_window.py  layout.py  main_layout.py  monitor_layout.py  settings_layout.py  tasks_layout.py
village/pybpodapi/: __init__.py  session.py
village/pybpodapi/bpod/: __init__.py  bpod_base.py  bpod_com_protocol.py  bpod_com_protocol_modules.py  bpod_io.py  non_blockingsocketreceive.py  non_blockingstreamreader.py
village/pybpodapi/bpod/hardware/: channels.py  hardware.py
village/pybpodapi/bpod/hardware/events/: __init__.py  base_eventname.py  bpod0_7_5_fw9.py  bpod0_7_9_fw13.py  bpod0_7_9_fw20.py
village/pybpodapi/bpod/hardware/input_channels/: __init__.py  bpod0_7_5_fw9.py  bpod0_7_9_fw13.py
village/pybpodapi/bpod/hardware/output_channels/: __init__.py  bpod0_7_5_fw9.py  bpod0_7_9_fw13.py  bpod0_7_9_fw20.py
village/pybpodapi/bpod_modules/: bpod_module.py  bpod_modules.py
village/pybpodapi/com/: arcom.py  stderr_buffer.py  stdout_buffer.py
village/pybpodapi/com/messaging/: base_message.py  debug.py  end_trial.py  error.py  event_occurrence.py  event_resume.py  parser.py  session_info.py  softcode_occurrence.py  state_occurrence.py  state_transition.py  stderr.py  stdout.py  trial.py  untagged_message.py  value.py  warning.py
village/pybpodapi/com/protocol/: recv_msg_headers.py  send_msg_headers.py
village/pybpodapi/exceptions/: bpod_error.py
village/pybpodapi/protocol/: __init__.py
village/pybpodapi/state_machine/: __init__.py  conditions.py  global_counters.py  global_timers.py  state_machine_base.py  state_machine_builder.py  state_machine_runner.py
village/pybpodapi/utils/: csv.py  date_parser.py
